Fix jump of a couple pixel in the nav when opening a dropdown

--- a/assets/styles/helpers/mixins.scss
+++ b/assets/styles/helpers/mixins.scss
@@ -54,6 +54,7 @@
 
   &:active, &.open {
     @apply border-b-[length:--border-lg];
+    margin-bottom: calc( (var(--border-lg) - var(--border-md)) * -1 );
   }
 
   &:focus, &:active, &.open {
